--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -30,12 +30,12 @@
     <div class="row">
       <div class="col-lg-4 ml-auto text-center">
         <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-        <p> <a href="tel:{{phone}}">{{phone}}</a></p>
+        <p> <a href="tel:{{phone}}">{{phone || strip || strip_newlines}}</a></p>
       </div>
       <div class="col-lg-4 mr-auto text-center">
         <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
         <p>
-          <a href="mailto:{{email}}">{{email}}</a>
+          <a href="mailto:{{email}}">{{email || strip || strip_newlines}}</a>
         </p>
       </div>
     </div>
