close #3 update title font on masterhead

--- a/_includes/components/masterhead.html
+++ b/_includes/components/masterhead.html
@@ -22,8 +22,8 @@
   <div class="container my-auto">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <h1 class="text-uppercase">
-          <strong>{{title}}</strong>
+        <h1>
+          {{title}}
         </h1>
         <hr>
       </div>
