--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -10,7 +10,8 @@ header.masthead {
     margin-bottom: 30px;
   }
   h1 {
-    font-size: 2rem;
+    font-size: 4rem;
+    @include stencil-font;
   }
   p {
     font-weight: 300;
@@ -26,12 +27,12 @@ header.masthead {
     padding-top: 0;
     padding-bottom: 0;
     h1 {
-      font-size: 3rem;
+      font-size: 6rem;
     }
   }
   @media (min-width: 1200px) {
     h1 {
-      font-size: 4rem;
+      font-size: 8rem;
     }
   }
 }
