--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -2,7 +2,7 @@
 #mainNav {
   border-bottom: 1px solid fade-out($gray-900, .9);
   background-color: $white;
-  @include sans-serif-font;
+  @include caption-font;
   @include transition-all;
   .navbar-brand {
     font-weight: 700;
@@ -18,7 +18,7 @@
     > li.nav-item {
        > a.nav-link,
       > a.nav-link:focus {
-        font-size: .9rem;
+        font-size: 1.2rem;
         font-weight: 700;
         text-transform: uppercase;
         color: $gray-900;
