--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,2 +1,2 @@
-@import url(http://allfont.net/allfont.css?fonts=hvd-peace);
+@import url(https://allfont.net/allfont.css?fonts=hvd-peace);
 @import url(https://fonts.googleapis.com/css?family=Anton|Montserrat:300,300i,700,700i|Oswald);
