close #6 add blueprints

--- a/_includes/components/masterhead.html
+++ b/_includes/components/masterhead.html
@@ -15,7 +15,7 @@
 {% endcapture %}
 
 {% comment %}
-  The background image is defined in the _masterhead.scss
+  The background image is defined in the _masthead.scss
 {% endcomment %}
 
 <header class="masthead text-center text-white d-flex">
@@ -28,7 +28,7 @@
         <hr>
       </div>
       <div class="col-lg-8 mx-auto">
-        <p class="text-faded mb-5">{{caption}}
+        <p class="text-faded mb-5">{{caption}}</p>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{ btn_href || strip || strip_newlines }}">{{ btn_txt || strip || strip_newlines }}</a>
       </div>
     </div>
