--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -19,7 +19,7 @@
 {% endcapture %}
 
 {% comment %}
-  The background image is defined in the _masterhead.scss
+  The background image is defined in the _masthead.scss
 {% endcomment %}
 
 <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
