close #7 gdpr file drop

--- a/css/creative.scss
+++ b/css/creative.scss
@@ -8,6 +8,7 @@
 @import "navbar.scss";
 @import "masthead.scss";
 @import "services.scss";
+@import "headers.scss";
 @import "portfolio.scss";
 @import "bootstrap-overrides.scss";
 @import "fonts.scss"
