--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -11,7 +11,7 @@
   background-size: cover;
 }
 @mixin serif-font() {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Montserrat', Arial, sans-serif;
 }
 @mixin sans-serif-font() {
   font-family: 'Montserrat', sans-serif;
