--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -8,16 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#butwhy">Why?</a>
+          <a class="nav-link js-scroll-trigger" href="/#butwhy">Why?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#services">How?</a>
+          <a class="nav-link js-scroll-trigger" href="/#services">How?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio">What?</a>
+          <a class="nav-link js-scroll-trigger" href="/#portfolio">What?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
         </li>
       </ul>
     </div>
