--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -17,6 +17,9 @@
           <a class="nav-link js-scroll-trigger" href="/#portfolio">What?</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/blueprints">Blue prints</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
         </li>
       </ul>
