close #31 rename blueprints to gigs

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -17,7 +17,7 @@
           <a class="nav-link js-scroll-trigger" href="/#portfolio">What?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="/blueprints">Blue prints</a>
+          <a class="nav-link js-scroll-trigger" href="/gigs/">Gigs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
