--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -7,14 +7,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/#home">Home</a>
+            </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="/#butwhy">Why?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="/#services">How?</a>
+          <a class="nav-link js-scroll-trigger" href="/#buthow">How?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="/#portfolio">What?</a>
+          <a class="nav-link js-scroll-trigger" href="/#butwhat">What?</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="/gigs/">Gigs</a>
