close #59 remove the css plugin magnific popup and renaim creative css to main css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- Plugin CSS -->
-  <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
   <!-- Custom styles for this template -->
-  <link href="/css/creative.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 
 
 
