close #64 make new scss files for navigation and section and implement and import them

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,4 +9,6 @@
 @import "services.scss";
 @import "headers.scss";
 @import "bootstrap-overrides.scss";
-@import "fonts.scss"
+@import "fonts.scss";
+@import "sections.scss";
+@import "navigation.scss"
