--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -20,11 +20,10 @@
 
 
 <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <h2 class="section-heading text-white">{{title}}</h2>
-        <hr class="light my-4">
+      <div class="col-lg-8">
+        <h2 class="section-heading">{{title}}</h2>
         <p class="text-faded mb-4">{{caption}}</p>
         <a class="btn btn-light btn-xl js-scroll-trigger" href="{{btn_href || strip || strip_newlines}}">{{btn_txt || strip || strip_newlines}}</a>
       </div>
