--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,3 +13,5 @@ $gray-900: #212529 !default;
 $black: #000 !default;
 
 $primary: #F05F40 !default;
+$prolikeyellow: #FFC400 !default;
+$prolikeblue: #1A2236 !default;
