close #66 implement and style dropdown menu navigation

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -2,15 +2,30 @@
 <div class="pos-f-t">
     
     <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-5" src="../../img/prolike-logo.png"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      
+      
+      <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#exampleModal">
         <span class="navbar-toggler-icon nav-bar-text"></span>
       </button>
       
     </nav>
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-dark p-4">
-        <h5 class="text-white h4">Collapsed content</h5>
-        <span class="text-muted">Toggleable via the navbar brand.</span>
+   
+  </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+          <button data-dismiss="modal" class="closebtn">X</button>
+        <div class="modal-content">
+            
+        <div class="modal-body">
+        <ul>
+          <li><a href="/#home" data-target="/#home" data-dismiss="modal">Prolike</a></li>
+          <li><a data-target="#butwhy" data-dismiss="modal">Why</a></li>
+          <li><a href="/#buthow" data-dismiss="modal">How</a></li>
+          <li><a href="/#butwhat" data-dismiss="modal">What</a></li>
+          <li><a href="/gigs/" data-dismiss="modal">Gigs</a></li>
+          <li><a href="/#contact" data-dismiss="modal">Contact</a></li>
+        </ul>
       </div>
     </div>
-  </div>
+      </div>
+    </div>
