close #48 design and implement contact page

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,4 +10,5 @@
 @import "bootstrap-overrides.scss";
 @import "fonts.scss";
 @import "sections.scss";
-@import "navigation.scss"
+@import "navigation.scss";
+@import "contact.scss";
