--- a/_includes/components/contact.html
+++ b/_includes/components/contact.html
@@ -1,43 +1,60 @@
 {% capture sectionid %}
-  {%if include.id%}{{include.id}}{%else%}no-id-given{%endif%}
+{%if include.id%}{{include.id}}{%else%}no-id-given{%endif%}
 {% endcapture %}
 
 {% capture email %}
-  {%if include.email%}{{include.email}}{%else%}your@email.here{%endif%}
+{%if include.email%}{{include.email}}{%else%}your@email.here{%endif%}
 {% endcapture %}
 
 {% capture phone %}
-  {%if include.phone%}{{include.phone}}{%else%}+1 123 456 789{%endif%}
+{%if include.phone%}{{include.phone}}{%else%}+1 123 456 789{%endif%}
 {% endcapture %}
 
 {% capture title %}
-  {%if include.title%}{{include.title}}{%else%}add "title=your title here" to the include{%endif%}
+{%if include.title%}{{include.title}}{%else%}add "title=your title here" to the include{%endif%}
 {% endcapture %}
 
 {% capture caption %}
-  {%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
-{% endcapture %}
+{%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
+    {% endcapture %}
 
-<section id="{{sectionid || strip || strip_newlines}}">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <h2 class="section-heading">{{title}}</h2>
-        <hr class="my-4">
-        <p class="mb-5">{{caption}}</p>
+    <section id="contact">
+      <div class="row">
+        <div class="col">
+          <h1>Navigation</h1>
+          <a href="#">Prolike</a>
+          <a href="#">Why</a>
+          <a href="#">How</a>
+          <a href="#">What</a>
+          <a href="#">Gigs</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="col">
+          <h1>Our Credo</h1>
+          <a href="#">Lean Software Development</a>
+          <a href="#">Serverless</a>
+          <a href="#">Autonomation</a>
+          <a href="#">Docker</a>
+          <a href="#">Kaizen</a>
+          <a href="#">Talent Development</a>
+        </div>
+        <div class="col">
+          <h1>Services</h1>
+          <a href="#">Garage Projects</a>
+          <a href="#">Open Source Contributions</a>
+          <a href="#">Team Resources</a>
+          <a href="#">Research</a>
+          <a href="#">JAM stack Development</a>
+          <a href="#">Integrations</a>
+        </div>
+        <div class="col">
+          <h1>Contact</h1>
+          <a href="#">hey@prolike.io</a>
+          <a href="#">VAT No.: 39464101</a>
+          <a href="#">intern@prolike.io</a>
+          <a href="#">+45 20 872 530</a>
+          <a href="#">Allerød Stationsvej 4</a>
+          <a href="#">3450 Allerød</a>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 ml-auto text-center">
-        <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-        <p> <a href="tel:{{phone}}">{{phone || strip || strip_newlines}}</a></p>
-      </div>
-      <div class="col-lg-4 mr-auto text-center">
-        <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-        <p>
-          <a href="mailto:{{email}}">{{email || strip || strip_newlines}}</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
