--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Anton|Montserrat:300,300i,700,700i|Oswald);
+@import url(https://fonts.googleapis.com/css?family=Anton|Montserrat:300,300i,400,400i,700,700i|Oswald);
 
 @font-face{
   font-family:hvd peace;
