--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <div class="pos-f-t">
     
-    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-5" src="../../img/prolike-logo.png"></a>
+    <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" src="../../img/prolike-logo.png"></a>
       
       
       <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#exampleModal">
@@ -18,12 +18,12 @@
             
         <div class="modal-body">
         <ul>
-          <li><a href="/#home" data-target="/#home" data-dismiss="modal">Prolike</a></li>
-          <li><a data-target="#butwhy" data-dismiss="modal">Why</a></li>
-          <li><a href="/#buthow" data-dismiss="modal">How</a></li>
-          <li><a href="/#butwhat" data-dismiss="modal">What</a></li>
+          <li><a href="#home" data-target="/#home" data-dismiss="modal">Prolike</a></li>
+          <li><a href="#why" data-dismiss="modal">Why</a></li>
+          <li><a href="#how" data-dismiss="modal">How</a></li>
+          <li><a href="#what" data-dismiss="modal">What</a></li>
           <li><a href="/gigs/" data-dismiss="modal">Gigs</a></li>
-          <li><a href="/#contact" data-dismiss="modal">Contact</a></li>
+          <li><a href="#contact" data-dismiss="modal">Contact</a></li>
         </ul>
       </div>
     </div>
