close #68 make logo smaller

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -18,12 +18,12 @@
             
         <div class="modal-body">
         <ul>
-          <li><a href="#home" data-target="/#home" data-dismiss="modal">Prolike</a></li>
-          <li><a href="#why" data-dismiss="modal">Why</a></li>
-          <li><a href="#how" data-dismiss="modal">How</a></li>
-          <li><a href="#what" data-dismiss="modal">What</a></li>
-          <li><a href="/gigs/" data-dismiss="modal">Gigs</a></li>
-          <li><a href="#contact" data-dismiss="modal">Contact</a></li>
+          <li><a href="#" data-dismiss="modal">Prolike</a></li>
+          <li><a href="#" data-dismiss="modal">Why</a></li>
+          <li><a href="#" data-dismiss="modal">How</a></li>
+          <li><a href="#" data-dismiss="modal">What</a></li>
+          <li><a href="#" data-dismiss="modal">Gigs</a></li>
+          <li><a href="#" data-dismiss="modal">Contact</a></li>
         </ul>
       </div>
     </div>
