--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -5,17 +5,19 @@ layout: default
 
     {% include components/navigation.html %}
 
-    <div class="container my-auto" style="padding-top: 6em;">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-10 mx-auto">
-          <h1>
-            {{page.title}}
-            
-          </h1>
-        </div>
-        <div class="col-lg-8 mx-auto">
+          <h1 class="gigs_title">
+              {{page.title}}
+            </h1>
+      </div>
+      <div class="row">
+        
+         
+        
+       
           {{content}}
-        </div>
+      
       </div>
     </div>
 
