close #72 cut the exp text in the gigs site so the box is always the same size

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -23,7 +23,7 @@
 }
 
 @mixin title-font(){
-  font-family: 'Anton', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 @mixin stencil-font(){
