--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -5,7 +5,7 @@
 .navbar{
     background-color: #1A2336 !important;
     color: #fff;
-    max-height: 50px;
+    height: 60px;
     z-index: 10;
     padding: 0 75px;
     display: flex;
