--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -5,12 +5,31 @@ layout: default
 
     {% include components/navigation.html %}
 
-    <div class="container-fluid">
+    <div class="container-fluid gig_container">
       <div class="row">
+
+        <div class="col-lg-12">
           <h1 class="gigs_title">
               {{page.title}}
-            </h1>
-      </div>
+            </h1></div>
+</div>
+            <div class="row">
+              <div class="col-lg-4">
+                <h2>Up next</h2>
+              </div>
+
+              <div class="col-lg-4">
+                  <h2>Working</h2>
+                </div>
+
+                <div class="col-lg-4">
+                    <h2>Done</h2>
+                  </div>
+
+            </div>
+
+      
+
       <div class="row">
         
          
