close #35 implement the layout for gigs

--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -8,23 +8,31 @@ layout: default
     <div class="container-fluid gig_container">
       <div class="row">
 
-        <div class="col-lg-12">
+        <div class="col-lg-5 m-auto">
           <h1 class="gigs_title">
               {{page.title}}
-            </h1></div>
-</div>
-            <div class="row">
-              <div class="col-lg-4">
-                <h2>Up next</h2>
-              </div>
-
-              <div class="col-lg-4">
-                  <h2>Working</h2>
+            </h1>
+<hr />
+              <p>Ut faucibus pulvinar elementum 
+                integer enim neque. Habitasse platea dictumst 
+                quisque sagittis purus sit amet. Tellus id interdum velit 
+                laoreet id donec ultrices tincidunt arcu. Sagittis 
+                purus sit amet volutpat. Mauris cursus mattis molestie a iaculis
+              at erat pellentesque. Eleifend donec pretium vulputate sapien 
+              nec sagittis aliquam malesuada bibendum. Sed risus ultricies tristique nulla.</p>
                 </div>
 
-                <div class="col-lg-4">
-                    <h2>Done</h2>
+</div>
+            <div class="row bg_red">
+
+                <div class="swimming col-lg-12">
+                    <h2 class="title-hr"><hr />Up Next<hr /></h2>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                    <h2 class="title-hr"><hr />Working<hr /></h2>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                    <h2 class="title-hr"><hr />Done<hr /></h2>
                   </div>
+
 
             </div>
 
