--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -17,13 +17,31 @@ border-radius: 5px;
     font-weight: 700;
     text-transform: uppercase;
     font-size: 50px;
+
 }
+
+.gigs_title {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
 .gig_container h2 {
     display: inline-block;
     width: 400px;
     margin: 0 auto;
     padding: 40px 0;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 900;
 }
+
+.swimming {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
 
 .gig_container .row {
     margin: 25px 0;
@@ -155,4 +173,20 @@ box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
   background: transparent;
 }
 
+.title-hr hr {
+    display: inline-block;
+    min-width: 30%;
+    margin: 5px 10px;
+    border-top: 3px solid #d6d6d6;
+ }
 
+ .gig_container i {
+     color: #9e9e9e;
+     font-size: 20px;
+ }
+
+
+ .col-lg-5 hr {
+     min-width: 100%;
+     border-color: $prolikeyellow;
+ }
