--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -1,3 +1,6 @@
+
+// --------------The boxes-------------- //
+
 .gig_box {
     height: 500px;
     width: 400px;
@@ -6,18 +9,41 @@
     padding: 50px 30px 0 30px;
     position: relative;
     -webkit-box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
--moz-box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
-box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
-border-radius: 5px;
+    -moz-box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
+    box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
+    border-radius: 5px;
 }
 
-// Text //
+.gig_box_body {
+    max-height: 200px;
+    min-height: 100px;
+    overflow: auto !important;
+    margin-bottom: 50px;
+}
+
+// --------------Text/icons/hr/other-------------- //
+
+.title-hr hr {
+    display: inline-block;
+    min-width: 30%;
+    margin: 5px 10px;
+    border-top: 3px solid #d6d6d6;
+ }
+
+ .gig_container i {
+     color: #9e9e9e;
+     font-size: 20px;
+ }
+
+ .col-lg-5 hr {
+     min-width: 100%;
+     border-color: $prolikeyellow;
+ }
 
 .gig_box h3 {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 50px;
-
 }
 
 .gigs_title {
@@ -41,7 +67,7 @@ border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-  }
+}
 
 .gig_container .row {
     margin: 25px 0;
@@ -54,10 +80,7 @@ border-radius: 5px;
     padding-right: 150px;
 }
 
-.done_box, .done_box a {
-    background-color: $prolikeyellow;
-    color: #1A2336;
-}
+// --------------Buttons / links-------------- //
 
 .view_more {
     padding: 10px;
@@ -66,12 +89,13 @@ border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
+    border-radius: 5px;
     transform: translate(-50%, 300%);
 }
 
-.done_box .view_more {
-    background-color:  #1A2336;
-    color: $prolikeyellow;
+.done_box, .done_box a {
+    background-color: $prolikeyellow;
+    color: #1A2336;
 }
 
 .on_box, .on_box a {
@@ -79,22 +103,32 @@ border-radius: 5px;
     color: white;
 }
 
-.on_box .view_more {
-    background-color: $prolikeyellow;
-    color:  #4B504C;
-
-}
-
 .upnext_box, .upnext_box a {
     background-color: #1A2336;
     color: white;
 }
 
-.upnext_box .view_more {
+.done_box .view_more {
+    background-color:  #1A2336;
+    color: $prolikeyellow;
+}
+
+.on_box .view_more {
     background-color: $prolikeyellow;
+    color:  #4B504C;
+}
+
+.upnext_box .view_more {
+    background-color: #4B504C;
     color:  #1A2336;
 
 }
+
+a:hover {
+    text-decoration: none;
+}
+
+// --------------Inset shadow-------------- //
 
 .done_box .shadow {
     -webkit-box-shadow: inset 0px -99px 80px -45px rgba(255,196,0,1) !important;
@@ -104,14 +138,14 @@ border-radius: 5px;
 
 .upnext_box .shadow {
     -webkit-box-shadow:  inset 0px -99px 80px -45px rgba(26,35,54,1) !important;
--moz-box-shadow: inset 0px -99px 80px -45px rgba(26,35,54,1) !important;
-box-shadow: inset 0px -99px 80px -45px rgba(26,35,54,1) !important;
+    -moz-box-shadow: inset 0px -99px 80px -45px rgba(26,35,54,1) !important;
+    box-shadow: inset 0px -99px 80px -45px rgba(26,35,54,1) !important;
 }
 
 .on_box .shadow {
     -webkit-box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
--moz-box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
-box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
+    -moz-box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
+    box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
 }
 
 .shadow {
@@ -123,16 +157,11 @@ box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
     left: 0;
 }
 
-.gig_box_body {
-    max-height: 200px;
-    min-height: 100px;
-    overflow: auto !important;
-    margin-bottom: 50px;
-}
-
 .shadow_p {
     position: relative;
 }
+
+// --------------Scrollbar-------------- //
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -152,41 +181,29 @@ box-shadow: inset 0px -99px 80px -45px rgba(75,80,76,1) !important;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background: #ffffff;
 }
+
 ::-webkit-scrollbar-thumb:active {
   background: #ffffff;
 }
+
 ::-webkit-scrollbar-track {
   background: transparent;
   border: 0px solid #241e1e;
   border-radius: 50px;
 }
+
 ::-webkit-scrollbar-track:hover {
   background: transparent;
 }
+
 ::-webkit-scrollbar-track:active {
   background: transparent;
 }
+
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
-
-.title-hr hr {
-    display: inline-block;
-    min-width: 30%;
-    margin: 5px 10px;
-    border-top: 3px solid #d6d6d6;
- }
-
- .gig_container i {
-     color: #9e9e9e;
-     font-size: 20px;
- }
-
-
- .col-lg-5 hr {
-     min-width: 100%;
-     border-color: $prolikeyellow;
- }
