--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -23,11 +23,17 @@
 
 // --------------Text/icons/hr/other-------------- //
 
+
 .title-hr hr {
     display: inline-block;
     min-width: 30%;
     margin: 5px 10px;
     border-top: 3px solid #d6d6d6;
+ }
+
+ .hr_big hr {
+    min-width: 100% !important;
+    border-color: $prolikeyellow;
  }
 
  .gig_container i {
@@ -46,12 +52,48 @@
     font-size: 50px;
 }
 
-.gigs_title {
+.gig_content h3 {
+    padding: 10px 0;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.gig_content a {
+    color:  #4B504C;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.gig_content a:hover {
+    color: $prolikeyellow;
+}
+
+.gig_content {
+    text-align: left;
+}
+
+.gig_desc i {
+    font-size: 50px;
+    padding-top: 30px;
+}
+
+.gig_content h1 {
+    text-transform: uppercase;
+}
+
+.gig_content h2 {
+    padding-bottom: 0;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 20px 0 10px 0;
+}
+
+.gig_title {
     text-transform: uppercase;
     font-weight: 700;
 }
 
-.gig_container h2 {
+.swimming h2 {
     display: inline-block;
     width: 400px;
     margin: 0 auto;
@@ -78,6 +120,7 @@
     font-family: 'Montserrat', sans-serif !important;
     padding-left: 150px;
     padding-right: 150px;
+    margin-top: 75px;
 }
 
 // --------------Buttons / links-------------- //
