close #77 make hamburger white

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -5,7 +5,7 @@
       
       
       <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#exampleModal">
-        <span class="navbar-toggler-icon nav-bar-text"></span>
+        <i class="fas fa-bars"></i>
       </button>
       
     </nav>
