--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -17,6 +17,12 @@
     
 }
 
+.fas {
+    color: white;
+    font-size: 2em;
+}
+
+
 .navbar-toggler, .navbar-toggler:active, .navbar-toggler:visited, .navbar-toggler:focus {
     border: none;
     box-shadow: none;
@@ -51,11 +57,13 @@ button:focus {
     background-color:#1A2336 !important;
     border: none;
     text-align: center;
-    
+}
+
+.modal-content ul li a {
+    font-size: 6em !important;
 }
 
 .modal-content ul li {
-    font-size: 60px;
     text-transform: uppercase;
     font-weight: bold;
     list-style-type: none;
