close #83 change status names to up next in progress and closed

--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -20,11 +20,11 @@ layout: default
             <div class="row bg_red">
 
                 <div class="swimming col-lg-12">
-                    <h2 class="title-hr"><hr />Up Nuxt<hr /></h2>
+                    <h2 class="title-hr"><hr />Up Next<hr /></h2>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                    <h2 class="title-hr"><hr />Working<hr /></h2>
+                    <h2 class="title-hr"><hr />In progress<hr /></h2>
                     <i class="fas fa-long-arrow-alt-right"></i>
-                    <h2 class="title-hr"><hr />Done<hr /></h2>
+                    <h2 class="title-hr"><hr />Closed<hr /></h2>
                   </div>
 
 
