--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -18,12 +18,12 @@
             
         <div class="modal-body">
         <ul>
-          <li><a href="#" data-dismiss="modal">Prolike</a></li>
-          <li><a href="#" data-dismiss="modal">Why</a></li>
-          <li><a href="#" data-dismiss="modal">How</a></li>
-          <li><a href="#" data-dismiss="modal">What</a></li>
-          <li><a href="#" data-dismiss="modal">Gigs</a></li>
-          <li><a href="#" data-dismiss="modal">Contact</a></li>
+          <li><a href="/#home">Home</a></li>
+          <li><a href="/#why">Why</a></li>
+          <li><a href="/#how">How</a></li>
+          <li><a href="/#what">What</a></li>
+          <li><a href="/gigs/">Gigs</a></li>
+          <li><a href="/#contact">Contact</a></li>
         </ul>
       </div>
     </div>
