--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,24 +1,21 @@
-#contact {
+.contact {
     background: $prolikeblue;
     height: 100vh;
-    padding-top: 25vh;
-    padding-left: 90px;
-    padding-right: 90px;
-}
 
-#contact h1 {
-    color: $prolikeyellow;
-    font-weight: 400;
-    font-size: 20px;
-}
+    h1 {
+        color: $prolikeyellow;
+        font-weight: 600;
+        font-size: 20px;
+    }
 
-#contact a {
-    font-size: 20px;
-    display: block;
-    color: #ffffff;
-}
+    a {
+        font-size: 20px;
+        display: block;
+        color: #ffffff;
+    }
 
-#contact a:hover {
-    color: $prolikeyellow;
-    text-decoration: none;
+    a:hover {
+        color: $prolikeyellow;
+        text-decoration: none;
+    }
 }
