--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -19,7 +19,7 @@
 
 .fas {
     color: white;
-    font-size: 2em;
+    font-size: 20px;
 }
 
 
@@ -60,7 +60,7 @@ button:focus {
 }
 
 .modal-content ul li a {
-    font-size: 5.5em !important;
+    font-size: 4.5em !important;
 }
 
 .modal-content ul li {
