--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -12,16 +12,19 @@
     background-color: inherit !important;
 }
 
-#fullpage h2 {
-    color: $prolikeblue !important;
-    font-size: 50px;
-    margin-bottom: 25px;
-}
-
-#fullpage p {
-    color: inherit;
-    font-size: 25px;
-    max-width: 70%;
+#fullpage {
+    
+    h2 {
+        color: $prolikeblue !important;
+        font-size: 50px;
+        margin-bottom: 25px;
+    }
+    
+    p {
+        color: inherit;
+        font-size: 25px;
+        max-width: 70%;
+    }
 }
 
 .btn {
@@ -31,5 +34,4 @@
     font-weight: 700;
     border-radius: 5px;
     margin-top: 10px;
-    font-size: 2em;
 }
