--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -12,6 +12,12 @@
     -moz-box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
     box-shadow: 0px 26px 41px 0px rgba(0,0,0,0.22);
     border-radius: 5px;
+
+    h3 {
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 50px;
+    }
 }
 
 .gig_box_body {
@@ -46,46 +52,41 @@
      border-color: $prolikeyellow;
  }
 
-.gig_box h3 {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 50px;
-}
-
-.gig_content h3 {
-    padding: 10px 0;
-    font-weight: bold;
-    font-size: 30px !important;
-}
-
-.gig_content a {
-    color:  #4B504C;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-.gig_content a:hover {
-    color: $prolikeyellow;
-}
-
 .gig_content {
     text-align: left;
+
+    h1 {
+        text-transform: uppercase;
+    }
+
+    h2 {
+        padding-bottom: 0;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 600;
+        padding: 20px 0 10px 0;
+    }
+
+    h3 {
+        padding: 10px 0;
+        font-weight: bold;
+        font-size: 30px !important;
+    }
+
+    a {
+        color:  #4B504C;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+
+    a:hover {
+        color: $prolikeyellow;
+    }
 }
 
 .gig_desc i {
     font-size: 50px;
     padding-top: 30px;
-}
-
-.gig_content h1 {
-    text-transform: uppercase;
-}
-
-.gig_content h2 {
-    padding-bottom: 0;
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 20px 0 10px 0;
 }
 
 .gigs_title {
@@ -94,22 +95,22 @@
     font-size: 4em !important;
 }
 
-.swimming h2 {
-    display: inline-block;
-    width: 400px;
-    margin: 0 auto;
-    padding: 40px 0;
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 900;
-}
-
 .swimming {
     height: auto;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+
+    h2 {
+        display: inline-block;
+        width: 400px;
+        margin: 0 auto;
+        padding: 40px 0;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 900;
+    }
 }
 
 .gig_container .row {
