--- a/_layouts/gigs_layout.html
+++ b/_layouts/gigs_layout.html
@@ -17,22 +17,22 @@ layout: default
                 </div>
 
 </div>
-            <div class="row bg_red">
+            <div class="row">
 
-                <div class="swimming col-lg-12">
+                <!-- <div class="swimming col-lg-12">
                     <h2 class="title-hr"><hr />Up Next<hr /></h2>
                     <i class="fas fa-long-arrow-alt-right"></i>
                     <h2 class="title-hr"><hr />In progress<hr /></h2>
                     <i class="fas fa-long-arrow-alt-right"></i>
                     <h2 class="title-hr"><hr />Closed<hr /></h2>
-                  </div>
+                  </div> -->
 
 
             </div>
 
       
 
-      <div class="row">
+      <div class="row center-forcer">
         
          
         
