--- a/_sass/_gigs.scss
+++ b/_sass/_gigs.scss
@@ -4,7 +4,6 @@
 .gig_box {
     height: 500px;
     width: 400px;
-    margin: 0 auto 40px auto;
     font-family: 'Montserrat', sans-serif !important;
     padding: 50px 30px 0 30px;
     position: relative;
@@ -25,6 +24,13 @@
     min-height: 100px;
     overflow: auto !important;
     margin-bottom: 50px;
+}
+
+
+.center-forcer {
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly; 
 }
 
 // --------------Text/icons/hr/other-------------- //
