--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -16,22 +16,21 @@
     
     h2 {
         color: $prolikeblue !important;
-        font-size: 50px;
-        margin-bottom: 25px;
+        font-size: 2.5em;
+        margin-bottom: .5em;
     }
     
     p {
         color: inherit;
-        font-size: 25px;
+        font-size: 1.5em;
         max-width: 70%;
     }
 }
 
 .btn {
     background: $prolikeyellow;
-    border-radius: none;
     color: $prolikeblue;
     font-weight: 700;
-    border-radius: 5px;
-    margin-top: 10px;
+    border-radius: 0em;
+    margin-top: .5em;
 }
