--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -2,32 +2,48 @@
 /* Mobile styling using plain CSS */
 
 @media (max-width: 768px) {
-    
-    .navbar {
-        padding: 0;
-    }
 
-    .section {
-        padding: 0 !important;
+    /* Sections */
+
+    .bg-primary {
+        padding: 0 15px;
     }
 
     #fullpage {
     
         h2 {
-            font-size: 1.5em;
+            font-size: 25px;
         }
         
         p {
-            font-size: 15px;
+            font-size: 20px;
+            max-width: 100%;
+        }
+
+        .btn {
+            background: $prolikeyellow;
+            color: $prolikeblue;
+            font-weight: 700;
+            border-radius: 0em;
+            padding: 20px 30px;
+            font-size: 18px;
         }
     }
     
-    .btn {
-        background: $prolikeyellow;
-        color: $prolikeblue;
-        font-weight: 700;
-        border-radius: 0em;
-        margin-top: .5em;
+    /* Navigation bar */
+
+    .navbar {
+        padding: 0 15px;
+    }
+
+    .col-sm-4 {
+        height: 20px;
+        width: auto;
+        padding: 0;
+    }
+
+    #fp-nav.fp-right {
+        display: none;
     }
 
 }
