close #101 website responsiveness revisited again

--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -46,4 +46,19 @@
         display: none;
     }
 
+    .contact {
+
+        h1 {
+            font-size: 18px;
+        }
+
+        a {
+            font-size: 18px;
+        }
+
+        .row .col {
+            margin-bottom: 50px;
+        }
+    }
+
 }
