close #105 fix menu

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -4,26 +4,23 @@
     <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="https://www.prolike.io"><img class="col-sm-4" src="../../img/prolike-logo.png"></a>
       
       
-    
-      <div class="dropdown" style="position: initial;">
-        <button class="navbar-toggler" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width: 100%; height: 93.5vh;">
-        
-            <a href="/#home">Home</a>
-            <a href="/#why">Why</a>
-            <a href="/#how">How</a>
-            <a href="/#what">What</a>
-            <a href="/gigs/">Gigs</a>
-            <a href="/#contact">Contact</a>
-          
-        </div>
+      <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
+        <span class="popuptext" id="myPopup">
+<ul>
+         <li> <a href="/#home">Home</a></li>
+         <li><a href="/#why">Why</a></li>
+         <li> <a href="/#how">How</a></li>
+         <li> <a href="/#what">What</a></li>
+         <li> <a href="/gigs/">Gigs</a></li>
+         <li> <a href="/#contact">Contact</a></li>
+          </ul>
+        </span>
       </div>
+ 
       
     </nav>
    
+    
   </div>
 
        
